# riscv-operator

./: .gitignore  CMake-Spike-pk.txt  CMakeLists.txt  README.md  build.sh  compare_compute.py  gemm.cpp  main.cpp  riscv64.cmake  run-spike.sh  run.sh  run_rvv.sh
src/: main.cpp  tool.h
src1/: common.h  kernels.cpp  main.cpp
src_c/: main.cpp  tool.cpp  tool.h
src_rvv/: main.cpp  tool.cpp  tool.h
